# shake-language-c

./: .gitignore  .travis.yml  CHANGELOG.md  Changelog.md  README.md  Setup.hs  default.nix  shake  shake-language-c.cabal  shake.hs  stack.yaml  stir  stir.cabal
Development/Shake/Language/: C.hs
Development/Shake/Language/C/: Android.hs  BuildFlags.hs  Config.hs  Host.hs  Label.hs  Language.hs  Linux.hs  NaCl.hs  OSX.hs  PkgConfig.hs  Rules.hs  Target.hs  ToolChain.hs  Util.hs  Windows.hs
Shakefile/: C.hs  Config.hs  Label.hs  SourceTree.hs
Shakefile/C/: Android.hs  BuildFlags.hs  Host.hs  Language.hs  Linux.hs  NaCl.hs  OSX.hs  PkgConfig.hs  Rules.hs  Target.hs  ToolChain.hs  Util.hs  Windows.hs
docs/: Manual.md
examples/: shakefile.hs
examples/src/: foo.cpp
src/Development/Shake/Language/C/: BuildFlags.hs  Config.hs  Host.hs  Language.hs  PkgConfig.hs  Rules.hs  Target.hs  ToolChain.hs
src/Development/Shake/Language/C/Host/: Linux.hs  OSX.hs  Windows.hs
tests/: doctests.hs  spectests.hs
tools/git-hooks/: pre-commit
