-- Copyright 2012-2014 Samplecount S.L.
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

Name:         shake-language-c
Version:      0.11.0
Synopsis:     Utilities for cross-compiling with Shake
Description:  This library provides <http://hackage.haskell.org/package/shake Shake> utilities for cross-compiling @C@, @C++@ and @ObjC@ code for various target platforms. Currently supported target platforms are Android, iOS, Linux, MacOS X, Windows\/MinGW and Google Portable Native Client (PNaCl). Supported host platforms are MacOS X, Linux and Windows.
Category:     Development
License:      Apache-2.0
License-File: LICENSE

Copyright:    Copyright (c) 2012 Samplecount S.L.
Homepage:     https://github.com/samplecount/shake-language-c
Bug-Reports:  https://github.com/samplecount/shake-language-c/issues
Maintainer:   stefan@samplecount.com

Cabal-Version: >= 1.8
Build-Type: Simple

Extra-Source-Files:
  CHANGELOG.md
  README.md

Library
  Hs-Source-Dirs: src
  Exposed-Modules:
    Development.Shake.Language.C
    Development.Shake.Language.C.BuildFlags
    Development.Shake.Language.C.Config
    Development.Shake.Language.C.Host
    Development.Shake.Language.C.Label
    Development.Shake.Language.C.PkgConfig
    Development.Shake.Language.C.ToolChain
    Development.Shake.Language.C.Target.Android
    Development.Shake.Language.C.Target.Linux
    Development.Shake.Language.C.Target.NaCl
    Development.Shake.Language.C.Target.OSX
    Development.Shake.Language.C.Target.Windows
  Other-Modules:
    Development.Shake.Language.C.Host.Linux
    Development.Shake.Language.C.Host.OSX
    Development.Shake.Language.C.Host.Windows
    Development.Shake.Language.C.Language
    Development.Shake.Language.C.Rules
    Development.Shake.Language.C.Target
    Development.Shake.Language.C.Util
  Ghc-Options: -Wall
  Build-Depends:
      base >= 4 && < 5
    , data-default-class
    , fclabels >= 2
    , process
    , shake >= 0.16
    , split
    , unordered-containers

test-suite doctests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        doctests.hs
  ghc-options:    -threaded
  build-depends:  base, doctest >= 0.8, shake, shake-language-c

test-suite spectests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        spectests.hs
  ghc-options:    -threaded
  build-depends:  base, directory, hspec, shake, shake-language-c

Source-Repository head
  Type:     git
  Location: https://github.com/samplecount/shake-language-c.git
