-- Copyright 2012-2014 Samplecount S.L.
-- 
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
-- 
--     http://www.apache.org/licenses/LICENSE-2.0
-- 
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

Name: stir
Version: 0.4.0
Synopsis: Build system based on shake
Description: Stir is a build system based on shake with a focus on cross-compiling C/C++/ObjC code for various target platforms. The list of supported platforms includes Android, Linux, MacOS X, iOS and Google Native Client.
Category: Development
License: Apache-2.0
License-File: LICENSE

Copyright: Copyright (c) 2012-2014 Samplecount S.L.
Maintainer: stefan@samplecount.com

Cabal-Version: >= 1.4
Build-Type: Simple

Extra-Source-Files:
  README.md
  stir

Library
  Hs-Source-Dirs: .
  Exposed-Modules:
    Shakefile.C
    Shakefile.C.Android
    Shakefile.C.BuildFlags
    Shakefile.C.Host
    Shakefile.C.Language
    Shakefile.C.Linux
    Shakefile.C.NaCl
    Shakefile.C.OSX
    Shakefile.C.PkgConfig
    Shakefile.C.Rules
    Shakefile.C.ToolChain
    Shakefile.C.Util
    Shakefile.C.Windows
    Shakefile.Configuration
    Shakefile.Label
    Shakefile.SourceTree
  Ghc-Options: -Wall
  Build-Depends:
      base >= 4 && < 5
    , directory
    , containers
    , fclabels >= 2
    , filemanip
    , filepath
    , process
    , setenv
    , shake >= 0.10
    , split
    , unordered-containers
