-- Copyright 2012-2014 Samplecount S.L.
-- 
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
-- 
--     http://www.apache.org/licenses/LICENSE-2.0
-- 
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

Name: shake-language-c
Version: 0.4.0
Synopsis: Utilities for cross-compiling with Shake
Description: This library provides Stir utilities for Shake with a focus on cross-compiling C/C++/ObjC code for various target platforms. The list of supported platforms includes Android, iOS, Linux, MacOS X, Windows/MinGW and Google Portable Native Client.
Category: Development
License: Apache-2.0
License-File: LICENSE

Copyright: Copyright (c) 2012-2014 Samplecount S.L.
Maintainer: stefan@samplecount.com

Cabal-Version: >= 1.4
Build-Type: Simple

Extra-Source-Files:
  README.md
  stir

Library
  Hs-Source-Dirs: .
  Exposed-Modules:
    Development.Shake.Language.C
    Development.Shake.Language.C.BuildFlags
    Development.Shake.Language.C.Config
    Development.Shake.Language.C.Host
    Development.Shake.Language.C.Language
    Development.Shake.Language.C.Label
    Development.Shake.Language.C.PkgConfig
    Development.Shake.Language.C.Rules
    Development.Shake.Language.C.Target.Android
    Development.Shake.Language.C.Target.Linux
    Development.Shake.Language.C.Target.NaCl
    Development.Shake.Language.C.Target.OSX
    Development.Shake.Language.C.Target.Windows
    Development.Shake.Language.C.ToolChain
    Development.Shake.Language.C.Util
  Other-Modules:
    Development.Shake.Language.C.Target
  Ghc-Options: -Wall
  Build-Depends:
      base >= 4 && < 5
    , fclabels >= 2
    , process
    , shake >= 0.10
    , split
    , unordered-containers
